Fix header overlapping the tags-container (fixes #21)

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -755,8 +755,8 @@ body {
   }
 }
 .header {
-  padding-top: 50px;
-  padding-bottom: 50px;
+  margin-top: 50px;
+  margin-bottom: 50px;
   font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
   -webkit-transform: translateZ(0);
   transform: translateZ(0);
