--- a/stylesheets/scss/_header.scss
+++ b/stylesheets/scss/_header.scss
@@ -1,7 +1,7 @@
 // HEADER
 .header {
-  padding-top: 50px;
-  padding-bottom: 50px;
+  margin-top: 50px;
+  margin-bottom: 50px;
   font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
   -webkit-transform: translateZ(0);
   transform: translateZ(0);
